@@ -1,3 +1,9 @@
+2017-02-12  Dan Bernstein  <mitz@apple.com>
+
+        Tried to fix USE(APPLE_INTERNAL_SDK) builds after r212211.
+
+        * platform/spi/mac/NSImmediateActionGestureRecognizerSPI.h:
+
 2017-02-12  Ryosuke Niwa  <rniwa@webkit.org>
 
         parserRemoveChild should unload subframes
